EXT-147 - Correct wrong margin

--- a/css/common.css
+++ b/css/common.css
@@ -46,7 +46,6 @@ input:focus {
 
 .login__input__submit__label span {
     vertical-align: 6px;
-    padding: 13px 40px;
     font-size: 16px;
 }
 
